# media_pipeline

./: .gitignore  CMakeLists.txt  Media_Pipeline_Framework.md  Media_Pipeline_Framework_V2.68.md  Media_Pipeline_Framework_V2.70.md  Media_Pipeline_Framework_V3.0.md  Media_Pipeline_Framework_V4.0.md  Media_Pipeline_Framework_V4.5.md  Media_Pipeline_Framework_V5.0.md  README.md  implementation_plan.md  refactoring_decisions.md
cmake/: FindFFmpeg.cmake  FindSDL3.cmake
cmake/toolchains/: aarch64.cmake  riscv64.cmake  x86_64.cmake
demo/: CMakeLists.txt  player.cpp
include/pipeline/core/: BaseNode.h  BoundedQueue.h  Buffer.h  BufferPool.h  Caps.h  Clock.h  Command.h  Edge.h  Event.h  Graph.h  INode.h  MessageBus.h  OutputRoute.h  Pad.h  Pipeline.h  Queue.h  StreamInfo.h  Types.h
include/pipeline/nodes/: AVDemuxNode.h  AudioPlayNode.h  DecodeNode.h  DemuxNode.h  FFmpegDemux.h  FileSource.h  VideoRenderNode.h
scripts/: build_ffmpeg.sh  build_sdl3.sh
src/: CMakeLists.txt  main.cpp
src/core/: BaseNode.cpp  BoundedQueue.cpp  Buffer.cpp  BufferPool.cpp  Caps.cpp  Clock.cpp  Edge.cpp  Event.cpp  Graph.cpp  INode.cpp  MessageBus.cpp  OutputRoute.cpp  Pad.cpp  Pipeline.cpp
src/nodes/: AVDemuxNode.cpp  AudioPlayNode.cpp  DecodeNode.cpp  DemuxNode.cpp  FFmpegDemux.cpp  FileSource.cpp  VideoRenderNode.cpp
tests/: CMakeLists.txt  sdl_test.cpp  test_bounded_queue.cpp  test_buffer.cpp  test_demux.cpp  test_pad.cpp  test_pipeline.cpp
